fix(workflow): prevent context shadowing via typed state schema (#40)
- Replace implicit node-ID-keyed context with a typed WorkflowStateSchema to ensure prompt variables always resolve to the latest mutated state, fixing stale evaluations.
- Update OutputExtractionPostProcessor and nodes to explicitly declare writes, mapping outputs to semantic state variables rather than node IDs.
- Introduce WorkflowValidator to provide strict compile-time validation of state variable declarations, writes mappings, and {variable} prompt bindings.
- Expand DSL capabilities with StateSchemaBuilder, ApprovalTransition, and onApproval/onRejection routing extensions.
- Migrate all existing JSON workflow fixtures, architectural documentation, and developer guides to reflect the new explicit state model.

Resolve: #39

Signed-off-by: Aleksandr Suvorov <asuvorov@hensu.io>